--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"> <i>Hi, I am a graduate student with a professional experience of over one year, 
                                 pursuing a Masters in computer science at the University of Florida. I'm an individual with great passion for learning. 
                                 Currently, working on latest technologies like Machine Learning focused on NLP, Elixir NodeJS and Django. 
-                                Apart from that, I'm also a sports enthusiast, Writer and Photographer.
+                                Apart from that, I'm also a sports enthusiast, writer and photographer.
                             </i></p>
                             </div>
                             <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
