--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                                     <li><span>C++</span></li>
                                     <li><span>Elixir</span></li>
                                     <li><span>Javascript</span></li>
+                                    <li><span>NodeJS</span></li>
                                     <li><span>Java</span></li>
                                     <li><span>SQL</span></li>
                                     <li><span>HTML</span></li>
