--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                     
                                 </ul>
                             </div>
-                            <a href="https://drive.google.com/file/d/1t7eo4jPNEtCJRpvMrsfBFfMG4rq3aT1N/view" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s" target="_blank">Downlaod CV <i class="fa fa-download"></i></a>
+                            <a href="https://drive.google.com/file/d/19y4hFeU0w3rCKxDUaU1ksGDNDcwhlDz4/view?usp=sharing" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s" target="_blank">Downlaod CV <i class="fa fa-download"></i></a>
                         </div>
                     </div>
                 </div>
@@ -514,8 +514,7 @@
                                         </div>
                                         <div class="each-info">
                                             <h4>Email</h4>
-                                            <a href="mailto:yourmail@email.com">desai.kirti@ufl.edu</a><br>
-                                            <a href="mailto:yourmail@email.com">kirtikd19@gmail.com</a>
+                                            <a href="mailto:desai.kirti1912@gmail.com">desai.kirti1912@gmail.com</a><br>
                                         </div>
                                     </div>
                                 </div>
