--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
     
 <head>
+                <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163777058-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-163777058-1');
+        </script>
         <title>Kirti Desai</title>
         <!-- Required meta tags -->
         <meta charset="utf-8">
