--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                     
                                 </ul>
                             </div>
-                            <a href="https://drive.google.com/file/d/19y4hFeU0w3rCKxDUaU1ksGDNDcwhlDz4/view?usp=sharing" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s" target="_blank">Downlaod CV <i class="fa fa-download"></i></a>
+                            <a href="assets\documents\Resume_desai_kirti_sde.pdf" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s" target="_blank">Downlaod CV <i class="fa fa-download"></i></a>
                         </div>
                     </div>
                 </div>
