--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
                         <div class="col-sm-6">
                             <div class="mh-header-info">
                                 <div class="mh-promo wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">
-                                    <span>Hello World, I'm</span>
+                                    <span>Ola, I'm</span>
                                 </div>
                                 
                                 <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Kirti Desai</h2>
                                 <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">Graduate Student at the University of Florida</h6>
                                 
                                 <ul>
-                                    <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><i class="fa fa-envelope"></i><a href="mailto:">desai.kirti@ufl.edu</a></li>
+                                    <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><i class="fa fa-envelope"></i><a href="mailto:desai.kirti1912@gmail.com">desai.kirti1912@gmail.com</a></li>
                                     <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><i class="fa fa-phone"></i><a href="callto:">+1 352-327-1994</a></li>
                                     <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s"><i class="fa fa-map-marker"></i><address>Gainesville, FL, United States-32608</address></li>
                                 </ul>
@@ -164,7 +164,7 @@
                             <div  class="work-responsibility">
                             <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"> <i>Hi, I am a graduate student with a professional experience of over one year, 
                                 pursuing Masters in computer science at the University of Florida. <br/> I'm an individual with great curiosity for learning new technologies.
-                                Currently exploring the field of Distributed Systems and Machine Learning. I'm working on latest technologies like NLP, Elixir, NodeJS and Django. 
+                                I am passionate about the field of Distributed Systems, Machine Learning focused on NLP along with latest web-technologies. I consider myself as a mathematics and algorithm junkie and avid problem solver. 
                                 I have strong web-development experience.<br/>
                                 Naturally, my codes go Pythonic.<br/>
                                 Apart from that, I'm also a sports enthusiast, writer and photographer.
