--- a/index.html
+++ b/index.html
@@ -241,14 +241,15 @@
                                             <li><i class="fa fa-circle"></i>Introduced automation to reduce the manual work of support executives as a maintenance owner</li>
                                             <li><i class="fa fa-circle"></i>Data curation using ETL and integration techniques for pre-processing of data extracted from Oracle DB</li>
                                             <li><i class="fa fa-circle"></i>Developed various mappings to perform various transformation and filters like Source Qualifier, Aggregator, Router, Joiner, Rank and Sequence Generator transform using Informatica Power Center</li>
+                                            <li><i class="fa fa-circle"></i>“Kudos Award” for developing a ticketing tool to auto-assign tickets which improved efficiency and ownership</li>
                                             <li><i class="fa fa-circle"></i>Handled change management, space management, and performed disaster recovery activities</li>
                                             <li><i class="fa fa-circle"></i>Awarded “Best Team” for on-time critical client deliveries within SLA like client money, stock hub</li>
-                                            <li><i class="fa fa-circle"></i>Received “Kudos Award” for consistent high performance for developing a MVC application in agile environment</li>
+                                           
                                         </ul>
                                     </div>                                
                                     <!-- Education Institutes-->
                                     <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
-                                        <h4>Summer Intern<br/><a href="#">State Remote Sensing Center</a></h4>
+                                        <h4>Summer Intern<br/><a href="#">Indian Space Research Organisation</a></h4>
                                         <div class="mh-eduyear">May 2016 - Jun 2016</div>
                                         <span>Responsibilities:</span>
                                         <ul class="work-responsibility">
@@ -259,7 +260,7 @@
                                     </div>                                
                                     <!-- Education Institutes-->
                                     <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                                        <h4>Summer Intern<br/><a href="#">Indian Space and Research Organisation</a></h4>
+                                        <h4>Summer Intern<br/><a href="#">Indian Space Research Organisation</a></h4>
                                         <div class="mh-eduyear">May 2015- Jun 2015</div>
                                         <span>Responsibilities :</span>
                                         <ul class="work-responsibility">
