--- a/index.html
+++ b/index.html
@@ -302,7 +302,6 @@
                             <div class="portfolioContainer row">
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
                                     <figure>
-                                       
                                         <img src="assets/images/portfolio/icontribute-home2.jpeg" alt="IContribute App Logo">
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
@@ -314,7 +313,7 @@
                                 </div>
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui mockup">
                                     <figure>
-                                        <img src="" alt="We got your next side hustle">
+                                        <img src="assets/images/portfolio/ilook-logo.png" alt="We got your next side hustle">
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">An NextJS App - ILook</h5>
@@ -340,6 +339,66 @@
                     </div> <!-- End: .part -->
                 </div> <!-- End: .row -->
             </div>
+
+            <div class="mh-portfolio-modal" id="icontribute">
+                <div class="container">
+                    <div class="row mh-portfolio-modal-inner">
+                        <div class="col-sm-5">
+                            <h2>IContribute</h2>
+                            <p>The purpose of our product is to connect students to local volunteer opportunities and 
+                            facilitate community involvement amongst the youth. 
+                            This app offers a centralized volunteer platform for students.</p>
+                            <p>Built and deployed a react-native application named IContribute to connect people with volunteer organizations.</p>
+                            <p> Designed a database schema, authentication system and delivered numerous features end to end.</p> 
+                            <p>Mentored peers as well as actively participated in testing, code-reviews, hackathon, and sprint meetings.</p>
+                            <div class="mh-about-tag">
+                                <ul>
+                                    <li><span>React-Native</span></li>
+                                    <li><span>Typescript</span></li>
+                                    <li><span>NodeJS</span></li>
+                                    <li><span>ReactJS</span></li>
+                                    <li><span>Firebase</span></li>
+                                    <li><span>Redux</span></li>
+                                    <li><span>Git</span></li>
+                                </ul>
+                            </div>
+                            <a href="https://play.google.com/store/apps/details?id=com.icontribute" class= "col-sm-8" target="_blank"><i class="fa fa-globe fa-2x" > Application </i></a>
+                        </div>
+                        <div class="col-sm-7">
+                            <div class="mh-portfolio-modal-img">
+                                <img src="assets/images/portfolio/icontribute.png" alt="" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="mh-portfolio-modal" id="ilook">
+                <div class="container">
+                    <div class="row mh-portfolio-modal-inner">
+                        <div class="col-sm-5">
+                            <h2>Ilook- share your idea</h2>
+                            <p>Developed a platform to build community to help people find their side projects, collaborators and mentors
+• Built features following REST architecture like authentication, post ideas-comments, followers and reputation </p>
+                            <div class="mh-about-tag">
+                                <ul>
+                                    <li><span>NextJS</span></li>
+                                    <li><span>React</span></li>
+                                    <li><span>MongoDB</span></li>
+                                    <li><span>Redux</span></li>
+                                </ul>
+                            </div>
+                            <a href="https://github.com/kdlogan19/Ilook" class= "col-sm-8" target="_blank"><i class="fa fa-github fa-2x" >   Repository </i></a>
+                        </div>
+                        <div class="col-sm-7">
+                            <div class="mh-portfolio-modal-img">
+                                <img src="assets/images/portfolio/ilook-cover.png" alt="" class="img-fluid"> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="mh-portfolio-modal" id="chatbot">
                 <div class="container">
                     <div class="row mh-portfolio-modal-inner">
